fix z-index

--- a/src/components/hamburgerMenu/index.module.scss
+++ b/src/components/hamburgerMenu/index.module.scss
@@ -8,6 +8,7 @@
   right: 0;
   background-color: $primary;
   transition: all 0.5s ease-in;
+  z-index: 1;
 
   display: flex;
   flex-direction: column;
