--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -31,7 +31,7 @@
     width: 45px;
     height: 45px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
 
     @media (min-width: 800px) {
       display: none;
