--- a/src/components/sections/aboutSection/index.module.scss
+++ b/src/components/sections/aboutSection/index.module.scss
@@ -38,9 +38,6 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-
-      .about1 {
-      }
     }
 
     .imageContainer {
